--- a/src/5_agentify.ipynb
+++ b/src/5_agentify.ipynb
@@ -2,8 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e543c262",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2d19dcef-f0d6-4ec6-9882-7e7dfc379f54",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Tool-calling Agent\n",
     "\n",
@@ -14,119 +22,100 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27f6cd44",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "af85a45b-9b43-4cd5-904f-6ba1bc6339d7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Install Dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5cd824a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/scott.mckean/Repos/hydrate_prediction/.venv/bin/python: No module named pip\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "37567088-2544-43dd-aac6-e303861603e3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%pip install uv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f2ddd9fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%sh` not found (But cell magic `%%sh` exists, did you mean that instead?).\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ebf7899a-2f32-4683-9bbb-76aa6660d76d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%sh uv pip install ."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "980802f8",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "25a2b344-f82e-4340-b74d-35d1c0005b9d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Tools"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "54381f0b",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1c408751-a477-47fc-b300-4a70935a6659",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "We could use something like Genie to talk with out data, but when the structures are simple, it makes sense to use a more lightweight approach. This is a simple example of using a SQL query as a tool."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0238e122",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hydrate.utils import DotConfig\n",
-    "config = DotConfig('config.yaml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ee8165c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spark.sql(\"\"\"\n",
-    "    CREATE OR REPLACE FUNCTION shm.3w.filter_well_data(\n",
-    "        p_well_number INT COMMENT 'well number',\n",
-    "        p_num_minutes INT COMMENT 'number of minutes'\n",
-    "    )\n",
-    "    RETURNS TABLE (\n",
-    "        `T-JUS-CKP` DOUBLE,\n",
-    "        `T-TPT` DOUBLE,\n",
-    "        `P-TPT` DOUBLE,\n",
-    "        `P-MON-CKP` DOUBLE,\n",
-    "        `P-PDG` DOUBLE,\n",
-    "        timestamp TIMESTAMP\n",
-    "    )\n",
-    "    RETURN\n",
-    "    SELECT\n",
-    "        `T-JUS-CKP`,\n",
-    "        `T-TPT`,\n",
-    "        `P-TPT`,\n",
-    "        `P-MON-CKP`,\n",
-    "        `P-PDG`,\n",
-    "        timestamp\n",
-    "    FROM (\n",
-    "    SELECT\n",
-    "        *,\n",
-    "        MAX(timestamp) OVER (PARTITION BY well_number) AS max_ts\n",
-    "    FROM shm.3w.well_data\n",
-    "    )\n",
-    "    WHERE well_number = p_well_number\n",
-    "    AND timestamp >= date_add(MINUTE, -p_num_minutes, max_ts)\n",
-    "\"\"\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "f3853540",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "89060d7e-b525-427b-8641-4a7025531eec",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Agent\n",
     "\n",
@@ -135,23 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ad561fed",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'databricks_langchain'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01magent\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AGENT\n\u001b[32m      2\u001b[39m AGENT.predict({\u001b[33m\"\u001b[39m\u001b[33mmessages\u001b[39m\u001b[33m\"\u001b[39m: [{\u001b[33m\"\u001b[39m\u001b[33mrole\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33muser\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mcontent\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mHello!\u001b[39m\u001b[33m\"\u001b[39m}]})\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/hydrate_prediction/agent.py:4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Any, Generator, Optional, Sequence, Union\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmlflow\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatabricks_langchain\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m      5\u001b[39m     ChatDatabricks,\n\u001b[32m      6\u001b[39m     VectorSearchRetrieverTool,\n\u001b[32m      7\u001b[39m     DatabricksFunctionClient,\n\u001b[32m      8\u001b[39m     UCFunctionToolkit,\n\u001b[32m      9\u001b[39m     set_uc_function_client,\n\u001b[32m     10\u001b[39m )\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlanguage_models\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LanguageModelLike\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mrunnables\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RunnableConfig, RunnableLambda\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'databricks_langchain'"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8d680c83-3299-40dc-bc7d-ed19e14e3f60",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from agent import AGENT\n",
     "AGENT.predict({\"messages\": [{\"role\": \"user\", \"content\": \"Hello!\"}]})"
@@ -159,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c029256",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "68081c53-76ec-4c27-ae2a-6044f5a57fe8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "for event in AGENT.predict_stream(\n",
@@ -172,8 +164,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83c83e4b",
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bbb474d3-c065-4b0d-ac6f-3e1acb55b066",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "raw"
     }
@@ -189,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "af445294",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e5222326-f803-446f-bb0c-9f1ca49fc26b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Determine Databricks resources to specify for automatic auth passthrough at deployment time\n",
@@ -237,8 +244,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "399df43e",
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ff5aada3-5d0b-4ac7-864c-7d7a55555ca0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "raw"
     }
@@ -253,9 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "daee47a4",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "03d997c8-b515-4103-b362-42226ccff379",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import mlflow\n",
@@ -287,8 +309,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21e98748",
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9883713f-2363-4dd6-a162-92f3dfb9afc9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "raw"
     }
@@ -301,9 +330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1506b9a7",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "aa570b58-76b9-43ad-a898-30c15a143d36",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "mlflow.models.predict(\n",
@@ -315,8 +352,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d3c722",
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ececc650-7f1a-48d7-b11a-a87d9b457a35",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
     "vscode": {
      "languageId": "raw"
     }
@@ -329,9 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25ce11cb",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0273851b-926b-4e7f-969a-b4af03336151",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
@@ -346,9 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f115ed4",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9397a589-3a27-4dac-bfea-38e93e442022",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -357,24 +417,27 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 2
+   },
+   "notebookName": "5_agentify",
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
