--- a/src/4_deploy.ipynb
+++ b/src/4_deploy.ipynb
@@ -2,8 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9af00a9b",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9c33a82b-557e-4cfb-8704-e0360b5380b7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Deploy\n",
     "\n",
@@ -12,8 +20,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59359e7d",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4df4c395-57dc-45af-b6c0-01958e572e3a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## ML Model Deployment\n",
     "We use MLflow's deploy client to simplify endpoint deployments"
@@ -21,21 +37,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1780c56",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a006c31b-702a-4b86-b5ac-81dcc8577695",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from mlflow.deployments import get_deploy_client\n",
     "\n",
     "client = get_deploy_client(\"databricks\")\n",
     "endpoint = client.create_endpoint(\n",
-    "    name=\"shm_3w_xgboost\",\n",
+    "    name=\"shm_3w_lightgbm\",\n",
     "    config={\n",
     "        \"served_entities\": [\n",
     "            {\n",
-    "                \"name\": \"xgboost\", \n",
-    "                \"entity_name\": \"shm.3w.well_1\",\n",
+    "                \"name\": \"lightgbm\", \n",
+    "                \"entity_name\": \"shm.3w.lightgbm\",\n",
     "                \"entity_version\": \"2\",\n",
     "                \"workload_size\": \"Small\",\n",
     "                \"scale_to_zero_enabled\": True\n",
@@ -44,7 +71,7 @@
     "        \"traffic_config\": {\n",
     "            \"routes\": [\n",
     "                {\n",
-    "                    \"served_model_name\": \"xgboost\",\n",
+    "                    \"served_model_name\": \"lightgbm\",\n",
     "                    \"traffic_percentage\": 100\n",
     "                }\n",
     "            ]\n",
@@ -55,39 +82,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ffa2be",
-   "metadata": {},
-   "source": [
-    "We can test our deployed model now"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e480df5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c9a2337c",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "15de58b3-b7df-487f-8afd-62b8c3d37977",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Prediction Tool\n",
     "\n",
-    "Let's declare a parameterized function that queries the model for a specific well and time range."
+    "Let's declare a parameterized function that queries the model for a specific well and time range. We have also defined other tools using SQL to get information about our well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ee8165c",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "266825a7-7217-4813-a013-4b8d48aed313",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "spark.sql(\"\"\"\n",
-    "    CREATE OR REPLACE FUNCTION shm.3w.get_hydrate_predictions(\n",
+    "    CREATE OR REPLACE FUNCTION shm.3w.predict_state(\n",
     "        p_well_number INT DEFAULT 16 COMMENT \"Well number between 1 and 50, must be integer\", \n",
     "        p_num_minutes INT DEFAULT 1 COMMENT \"Number of minutes to predict, must be under 30\"\n",
     "    )\n",
@@ -116,24 +143,36 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
+   "dashboards": [],
+   "environmentMetadata": {
+    "base_environment": "",
+    "environment_version": "3"
+   },
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 2
+   },
+   "notebookName": "4_deploy",
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
